Implemented modular sawblade loading for different scenes & scene transitions after collecting required coins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,8 @@ add_executable(Test
         src/vendor/tinyxml2.cpp
         src/manager/AssetManager.cpp
         src/manager/Scene.cpp
+        src/utils/JsonLoader.cpp
+        src/vendor/json.hpp
 )
 
 #if (MSVC)
